Feat: presentation.res의 main화면
- activity_main/Home/Recipe.xml 추가
- 하단 바 xml 추가

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">presentation</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_home">홈</string>
+    <string name="title_myfridge">냉장고</string>
+    <string name="title_recipe">레시피</string>
+    <string name="title_mypage">마이</string>
 </resources>
