--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
-    <string name="app_name">presentation</string>
-    <string name="title_home">홈</string>
-    <string name="title_myfridge">냉장고</string>
-    <string name="title_recipe">레시피</string>
-    <string name="title_mypage">MY</string>
+    <string name="app_name">냉장고 구조대</string>
+
+    <string name="action_location">내 위치</string>
+    <string name="action_mypage">마이페이지</string>
+
+    <string name="button_myfridge">냉장고</string>
+    <string name="button_recipe">레시피</string>
 
     <string name="finish_app">앱 종료</string>
 </resources>
