Feat: custon view 추가, views/main adapter, viewmodel 기초
- sticky scroll view
- presentation/views/main에 여럿 추가
- main의 adapter 진행중

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,11 +1,23 @@
 <resources>
 
     <string name="app_name">냉장고 구조대</string>
-    <string name="action_location">내 위치</string>
-    <string name="action_mypage">마이페이지</string>
+
+    <string name="toolbar_location">내 위치</string>
+    <string name="toolbar_mypage">마이페이지</string>
+    <string name="toolbar_setting">탭 설정</string>
+    <string name="toolbar_top">상단</string>
+
     <string name="button_myfridge">냉장고</string>
     <string name="button_recipe">레시피</string>
+    <string name="button_diet">식단</string>
     <string name="main_search">재료, 레시피 검색</string>
+    <string name="main_add_descriptor">식재료 추가</string>
+    <string name="main_tab_main_dish">주 요리</string>
+    <string name="main_tab_side_dish">반찬</string>
+    <string name="main_tab_conv">간편식</string>
+    <string name="main_tab_meal">식사</string>
+    <string name="main_tab_dessert">간식</string>
+
 
     <string name="finish_app">앱 종료</string>
 </resources>
