--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="main_tab_meal">식사</string>
     <string name="main_tab_dessert">간식</string>
 
-    <string name="add_ingr_name">먹거리 이름</string>
+    <string name="add_ingr_name_hint">먹거리 이름</string>
     <string name="add_ingr_exp">유통 기한</string>
     <string name="add_ingr_storage">보관 장소</string>
     <string name="add_ingr_use">사용 기한</string>
